--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -25,6 +25,13 @@
 			</h2>
 			<h5>Joined <span th:text="${#dates.format(user.createdAt, 'MMMM dd, yyyy')}"></span></h5>
 
+			<form th:action="@{/follow/} + ${user.username}" th:if="${!following && !isSelfPage}" method="post">
+			    <button style="float:right" type="Submit" class="btn btn-lg btn-success">Follow</button>
+			</form>
+			<form th:action="@{/unfollow/} + ${user.username}" th:if="${following && !isSelfPage}" method="post">
+			    <button style="float:right" type="Submit" class="btn btn-lg btn-primary unfollow_btn">Following</button>
+			</form>
+
 
 		    <div th:if="${not #lists.isEmpty(tweetList)}">
 			    <h3>Tweets</h3>
